[tool.poetry]
name = "repl_python3_server-cloner-"
version = "0.1.0"
description = ""
authors = ["Bagwan1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
os = "^1.0"
threading = "^1.0"
requests = "^1.0"
random = "^1.0"
dhooks = "^1.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
